--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="nav">
   <input type="checkbox" id="nav-check">
   <div class="nav-header">
-    <img src="https://prize-pulse.github.io/image-icon/favicon.ico" class="nav-icon">
+    <img src="/icons/android-chrome-512x512.png" class="nav-icon" alt="Tool Sphere Icon">
     <div class="nav-title">
       🔧 Tool Sphere
     </div>
