--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   </div>
   
   <div class="nav-links">
-    <a href="//github.io/jo_geek" target="_blank">Github</a>
+    <a href="#">👨🏻‍💻 • AI code Writer </a>
+    <a href="#">💬 • Text Translate </a>
   </div>
 </div>
 </body>
