--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
   <div class="nav-links">
     <a href="#">👨🏻‍💻 • AI code Writer </a>
-    <a href="#">💬 • Text Translate </a>
+    <a href="#">💬 • Text Translator </a>
   </div>
 </div>
 </body>
