--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>🔧 Tool Sphere</title>
+  <title>🔧 Tool Sphere • All Types Of Online Free Tools In One Place</title>
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -40,8 +40,8 @@
   </div>
 </div>
 </body>
-  <div style="width: 100%; text-align: centre;">
-<h1>Tool-Sphere All Types Of Tool In One Place</h1>
+  <div style="width: 100%; text-align: center;">
+<h1>🔧 Tool Sphere • All Types Of Online Free Tools In One Place</h1>
   </div>
 
 </html>
