--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 </div>
 </body>
-  <div style="width: 100%; text-align: center;">
+  <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>🔧 Tool Sphere • All Types Of Online Free Tools In One Place</h1>
   </div>
 
