--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>🔧 Tool Sphere • All Types Of Online Free Tools In One Place</title>
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/badge.css" rel="stylesheet" type="text/css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
@@ -43,5 +44,18 @@
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>🔧 Tool Sphere • All Types Of Online Free Tools In One Place</h1>
   </div>
-
+<span style="display: inline-block; margin-top: 20px; font-size: 3em; clear: both;">Tools We Provide  &#8628;</span>
+  <span class="pro-ttle">» <a href="#" style="color: white;">AI Code Writer</a> :       <span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+  <p class="abt-para-pro">We offer an AI-powered Text-to-Code generator, allowing you to effortlessly generate code in any programming language. Our AI Code Generator facilitates quicker coding with zero errors and syntax mistakes, and it's completely free for all users. </p>
+  <p class="abt-para-pro">
+Additionally, our platform provides a robust debugging environment, empowering you to troubleshoot your code efficiently. If you wish to enhance your code with new features, our system supports seamless integration. Experience the convenience of our user-friendly interface and take advantage of a comprehensive set of tools for an enhanced coding experience.</p>
+  
+<div class="line"></div>
+  
+  <span class="pro-ttle">» <a href="#" style="color: white;">Text Translator</a> :   <span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+  <p class="abt-para-pro"></p>
 </html>
+
+
+
+
