--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <div class="nav-links">
     <a href="#">👨🏻‍💻 • AI code Writer </a>
     <a href="#">💬 • Text Translator </a>
+    <a href="/privacy-policy">🔏 • Privacy Policy </a>
   </div>
 </div>
   
