--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Additionally, our platform provides a robust debugging environment, empowering y
   <p class="abt-para-pro">We introduce a Text Translator designed to seamlessly translate content across various languages with built-in language detection and autocorrection features. Our Translator provides a user-friendly solution for effortless language conversion, ensuring accurate and error-free translations without any cost for users.
   </p><p class="abt-para-pro">
 The platform automatically detects the source language and offers autocorrection to refine translated text. This ensures precision and clarity in your translations. If you desire to enrich your content with additional linguistic features, our system supports smooth integration. Explore the convenience of our user-friendly interface and leverage a comprehensive suite of tools for an enhanced text translation experience.</p>
-<footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; position: fixed; bottom: 0; width: 100%;">
+<footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
 </body>
