--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -33,7 +33,7 @@
 
   <h1>Privacy Policy</h1>
 
-  <p><em>Last Updated: [Date]</em></p>
+  <p><em>Last Updated: 21 November 2023</em></p>
 
   <h2>1. Overview</h2>
   <p>Welcome to Tool Sphere! At Tool Sphere, we are committed to safeguarding your privacy while providing a wide range of free tools. This Privacy Policy outlines the information we may collect, how we use it, and how we ensure the security of your data.</p>
@@ -73,7 +73,13 @@
   <h2>11. Updates to Privacy Policy</h2>
   <p>This Privacy Policy may be updated periodically. Users will be notified of changes through the website.</p>
 
-  <h2>12. Contact Information</h2>
+  <h2>12. GDPR Compliance</h2>
+  <p>As part of our commitment to user privacy, we comply with the General Data Protection Regulation (GDPR). This includes providing a lawful basis for processing personal data and respecting user rights regarding their data.</p>
+
+  <h2>13. CPRA Compliance</h2>
+  <p>We also adhere to the California Privacy Rights Act (CPRA). This includes providing users with the right to correct inaccurate personal information and ensuring compliance with the regulations set forth by CPRA.</p>
+
+  <h2>14. Contact Information</h2>
   <p>For any inquiries or concerns regarding your privacy, you can reach out to us through the following:</p>
   <ul>
     <li><strong>Contact Page:</strong> <a href="https://tool-sphere.github.io/contact">Tool Sphere Contact</a></li>
