--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Additionally, our platform provides a robust debugging environment, empowering y
 The platform automatically detects the source language and offers autocorrection to refine translated text. This ensures precision and clarity in your translations. If you desire to enrich your content with additional linguistic features, our system supports smooth integration. Explore the convenience of our user-friendly interface and leverage a comprehensive suite of tools for an enhanced text translation experience.</p>
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
-  <a href="/privacy-policy">Privacy Policy</a>
+  <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a>
     </footer>
 </body>
 </html>
