--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
   
   <div class="nav-links">
-    <a href="#">👨🏻‍💻 • AI code Writer </a>
+    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI code Writer </a>
     <a href="#">💬 • Text Translator </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
   </div>
