--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
   <div class="nav-links">
     <a href="/tools/code-generator-ai">👨🏻‍💻 • AI code Writer </a>
-    <a href="#">💬 • Text Translator </a>
+    <a href="/tools/translator">💬 • Text Translator </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
   </div>
 </div>
