--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
   </div>
 <span style="display: inline-block; margin-top: 20px; font-size: 3em; clear: both;">Tools We Provide  &#8628;</span>
   <br>
-  <span class="pro-ttle">» <a href="#" style="color: white;">AI Code Writer</a> :       <span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+  <span class="pro-ttle">» <a href="/tools/code-generator-ai" style="color: white;">AI Code Writer</a> :       <span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
   <p class="abt-para-pro">We offer an AI-powered Text-to-Code generator, allowing you to effortlessly generate code in any programming language. Our AI Code Generator facilitates quicker coding with zero errors and syntax mistakes, and it's completely free for all users. </p>
   <p class="abt-para-pro">
 Additionally, our platform provides a robust debugging environment, empowering you to troubleshoot your code efficiently. If you wish to enhance your code with new features, our system supports seamless integration. Experience the convenience of our user-friendly interface and take advantage of a comprehensive set of tools for an enhanced coding experience.</p>
   
 <div class="line"></div>
   
-  <span class="pro-ttle">» <a href="#" style="color: white;">Text Translator</a> :   <span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+  <span class="pro-ttle">» <a href="/tools/translator" style="color: white;">Text Translator</a> :   <span class="pink-badge" style="margin-left: 10px;">Free</span></span>
   <p class="abt-para-pro">We introduce a Text Translator designed to seamlessly translate content across various languages with built-in language detection and autocorrection features. Our Translator provides a user-friendly solution for effortless language conversion, ensuring accurate and error-free translations without any cost for users.
   </p><p class="abt-para-pro">
 The platform automatically detects the source language and offers autocorrection to refine translated text. This ensures precision and clarity in your translations. If you desire to enrich your content with additional linguistic features, our system supports smooth integration. Explore the convenience of our user-friendly interface and leverage a comprehensive suite of tools for an enhanced text translation experience.</p>
