--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </div>
   
   <div class="nav-links">
+    <a href="/">🏠 • Home</a>
     <a href="/tools/code-generator-ai">👨🏻‍💻 • AI code Writer </a>
     <a href="/tools/translator">💬 • Text Translator </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
