--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <a href="/">🏠 • Home</a>
     <a href="/tools/code-generator-ai">👨🏻‍💻 • AI code Writer </a>
     <a href="/tools/translator">💬 • Text Translator </a>
+    <a href="/tools/email-sender">📨 • Email Sender </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
   </div>
 </div>
