--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -1,1 +1,57 @@
-ai code generator ai
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>AI Code Generator • 🔧 Tool Sphere</title>
+  <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/badge.css" rel="stylesheet" type="text/css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+<link rel="manifest" href="/icons/site.webmanifest">
+<link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/icons/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/icons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+<div class="nav">
+  <input type="checkbox" id="nav-check">
+  <div class="nav-header">
+    <img src="/icons/android-chrome-512x512.png" class="nav-icon" alt="Tool Sphere Icon" width="50" height="50">
+    <div class="nav-title">
+      🔧 Tool Sphere
+    </div>
+  </div>
+  <div class="nav-btn">
+    <label for="nav-check">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+  </div>
+  
+  <div class="nav-links">
+    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI code Writer </a>
+    <a href="/tools/translator">💬 • Text Translator </a>
+    <a href="/privacy-policy">🔏 • Privacy Policy </a>
+  </div>
+</div>
+  
+  <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
+<h1>AI Code Generator • 🔧 Tool Sphere</h1>
+  </div> 
+ <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+ 
+<div class="line"></div>
+ 
+<footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
+  <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a>
+    </footer>
+</body>
+  </html>
