--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -36,8 +36,10 @@
   </div>
   
   <div class="nav-links">
+    <a href="/">🏠 • Home</a>
     <a href="/tools/code-generator-ai">👨🏻‍💻 • AI code Writer </a>
     <a href="/tools/translator">💬 • Text Translator </a>
+    <a href="/tools/email-sender">📨 • Email Sender </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
   </div>
 </div>
