--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
   <div class="nav-links">
     <a href="/">🏠 • Home</a>
-    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI code Writer </a>
+    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
     <a href="/tools/translator">💬 • Text Translator </a>
     <a href="/tools/email-sender">📨 • Email Sender </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
@@ -49,7 +49,7 @@
   </div>
 <span style="display: inline-block; margin-top: 20px; font-size: 3em; clear: both;">Tools We Provide  &#8628;</span>
   <br>
-  <span class="pro-ttle">» <a href="/tools/code-generator-ai" style="color: white;">AI Code Writer</a> :       <span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+  <span class="pro-ttle">» <a href="/tools/code-generator-ai" style="color: white;">AI Code Generator</a> :       <span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
   <p class="abt-para-pro">We offer an AI-powered Text-to-Code generator, allowing you to effortlessly generate code in any programming language. Our AI Code Generator facilitates quicker coding with zero errors and syntax mistakes, and it's completely free for all users. </p>
   <p class="abt-para-pro">
 Additionally, our platform provides a robust debugging environment, empowering you to troubleshoot your code efficiently. If you wish to enhance your code with new features, our system supports seamless integration. Experience the convenience of our user-friendly interface and take advantage of a comprehensive set of tools for an enhanced coding experience.</p>
