--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>🔧 Tool Sphere • All Types Of Online Free Tools In One Place</title>
+  <meta name="keywords" content="online tools, text translation, AI code generator, email sending tool, programming, web development, productivity tools, language translation, code automation, email marketing, free tools", automatic code creation, education tools, online tools, free online tools, ghost writer ai, free code generator ai, translate, text translation, translator ai, email sender, send email online, without any api key">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
