--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -16,6 +16,8 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+  <link rel="canonical" href="https://tool-sphere.github.io/" />
+  
 </head>
 
 <body>
