--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>AI Code Generator • 🔧 Tool Sphere</title>
+  <title>AI code generator : generate code using AI • Tool Sphere</title>
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <div class="nav-header">
     <img src="/icons/android-chrome-512x512.png" class="nav-icon" alt="Tool Sphere Icon" width="50" height="50">
     <div class="nav-title">
-      🔧 Tool Sphere
+       Tool Sphere
     </div>
   </div>
   <div class="nav-btn">
@@ -47,10 +47,13 @@
 </div>
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-<h1>AI Code Generator • 🔧 Tool Sphere</h1>
+<h1>AI code generator : generate code using AI</h1>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
+<div class="line"></div>
+
+
 <div class="line"></div>
  
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
