--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -55,7 +55,10 @@
 
 
 <div class="line"></div>
- 
+ <span style="text-align: center; font-size: 1.3em;"> Frequently Asked Question And Answer</span>
+  <span style="font-size: 12px;"><strong>Question: What is the purpose of the AI code generator?</strong></span> <br>
+  <span style="font-size: 12px;">Answer: Our AI code generator is designed to assist users in quickly and effortlessly generating code in various programming languages. It aims to streamline the coding process, reduce errors, and enhance overall efficiency.</span>
+  <div class="line"></div>
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a>
