--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -47,7 +47,7 @@
 </div>
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-<h1>AI code generator : generate code using AI</h1>
+<h1>AI code generator : generate code using AI in any language</h1>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -55,13 +55,22 @@
 
 
 <div class="line"></div>
- <span style="text-align: center; font-size: 1.3em;"> Frequently Asked Question And Answer</span>
-  <span style="font-size: 12px;"><strong>Question: What is the purpose of the AI code generator?</strong></span> <br>
-  <span style="font-size: 12px;">Answer: Our AI code generator is designed to assist users in quickly and effortlessly generating code in various programming languages. It aims to streamline the coding process, reduce errors, and enhance overall efficiency.</span>
-  <div class="line"></div>
-<footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
+ <span style="text-align: center; font-size: 2em;"> Frequently Asked Question And Answer</span> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What is the purpose of the AI code generator?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our AI code generator is designed to assist users in quickly and effortlessly generating code in various programming languages. It aims to streamline the coding process, reduce errors, and enhance overall efficiency.</span>
+<br> <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: </strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: </span><br> 
+  <div class="line"></div> <br>
+  
+  
+  
+  
+  
+  <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a>
     </footer>
 </body>
   </html>
+
