--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -59,6 +59,21 @@
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What is the purpose of the AI code generator?</strong></span> <br>
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our AI code generator is designed to assist users in quickly and effortlessly generating code in various programming languages. It aims to streamline the coding process, reduce errors, and enhance overall efficiency.</span>
 <br> <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How does the AI code generator work?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our AI code generator utilizes advanced machine learning algorithms to analyze user input and generate corresponding code snippets. It learns from a diverse set of examples, allowing it to provide accurate and context-aware code suggestions.</span><br> 
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is the generated code error-free?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: While our AI code generator aims to minimize errors, it's essential to review the generated code for accuracy and relevance to your specific requirements. Users should conduct thorough testing to ensure the desired functionality.</span><br> 
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: In which programming languages does the code generator support?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our code generator supports a wide range of programming languages, including but not limited to Python, JavaScript, Java, C++, and more. We continuously update and expand language support based on user feedback and industry trends.</span><br> 
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: </strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: </span><br> 
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: </strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: </span><br> 
+  <div class="line"></div> <br>
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: </strong></span> <br>
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: </span><br> 
   <div class="line"></div> <br>
@@ -73,4 +88,3 @@
     </footer>
 </body>
   </html>
-
