--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -68,14 +68,16 @@
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: In which programming languages does the code generator support?</strong></span> <br>
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our code generator supports a wide range of programming languages, including but not limited to Python, JavaScript, Java, C++, and more. We continuously update and expand language support based on user feedback and industry trends.</span><br> 
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: </strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: </span><br> 
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is the AI code generator free to use?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, our AI code generator is completely free for all users. We believe in providing accessible tools to the programming community to enhance the coding experience for developers of all skill levels.</span><br> 
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: </strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: </span><br> 
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I integrate the generated code into my projects?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely! The generated code is intended for use in your projects. Our system supports seamless integration, allowing you to enhance your code with new features and functionalities.</span><br> 
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: </strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: </span><br> 
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question:  Is my data secure when using the AI code generator?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: We prioritize the security and privacy of user data. The code generation process is performed locally on our servers, and we do not store any sensitive or personal information.
+
+Feel free to customize these FAQs to better suit the specifics of your AI code generator and the concerns your users might have.</span><br> 
   <div class="line"></div> <br>
   
   
