--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>AI code generator : generate code using AI • Tool Sphere</title>
+  <meta name="description" content="Explore our AI-powered code generator – a revolutionary tool for effortless code creation in multiple programming languages. Enhance your coding experience with error-free snippets, streamlined development, and increased productivity. Try our free online code generation tool today!">
  <meta name="keywords" content="AI code generator, code generation tool, programming language generator, automatic code creation, code automation, text-to-code, code snippet generator, coding assistant, development tools, machine learning code, programming utilities, code optimization, code suggestions, programming productivity, software development, coding efficiency, online coding tool, syntax error-free code, programming assistance">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
