--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -84,7 +84,22 @@ Feel free to customize these FAQs to better suit the specifics of your AI code g
   
   
   
-  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is the best AI code generator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The best AI code generator is one that suits your specific needs. Our website offers a powerful code generation tool, allowing you to effortlessly generate code in multiple programming languages. Try it out and experience streamlined development with error-free snippets."
+      }
+    }
+  ]
+}
+  </script>
   
   <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
