--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -54,7 +54,14 @@
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
 <div class="line"></div>
-
+<div style="width: 100%;">
+  <textarea style="width: 90%; height: 200px; background-color: transparent; color: white: border: 1px solid gray; border-radius: 20px; padding: 8px;"></textarea>
+  <br>
+  <button style="width: 70%; height: 1em; background-color: gray; color: black; font-size: 0.8em; border-radius: 12px; border: 1px gold solid;">
+  GENERATE CODE  
+  </button>
+</div>
+  
 
 <div class="line"></div>
  <span style="text-align: center; font-size: 2em;"> Frequently Asked Question And Answer</span> <br>
