--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -55,7 +55,7 @@
  
 <div class="line"></div>
 <div style="width: 100%;">
-  <textarea style="margin: 0 auto; margin-top: 18px; width: 90%; height: 200px; background-color: transparent; color: white: border: 1px solid gray; border-radius: 20px; padding: 8px;"></textarea>
+  <textarea style="margin: 0 auto; margin-top: 18px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 20px; padding: 8px;"></textarea>
   <br>
   <button style="margin: 0 auto; margin-top: 10px; width: 70%; height: 1em; background-color: gray; color: black; font-size: 0.8em; border-radius: 12px; border: 1px gold solid;">
   GENERATE CODE  
