--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -54,8 +54,8 @@
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
 <div class="line"></div>
-<div style="width: 100%;">
-  <textarea style="margin: 0 auto; margin-top: 18px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 20px; padding: 8px;"></textarea>
+<div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
+  <textarea style="margin: 0 auto; margin-top: 18px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
   <button style="margin: 0 auto; margin-top: 10px; width: 70%; height: 1em; background-color: gray; color: black; font-size: 0.8em; border-radius: 12px; border: 1px gold solid;">
   GENERATE CODE  
