--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -56,9 +56,9 @@
 <div class="line"></div>
 <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
 <span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Your Prompt: </span>
-  <textarea style="margin: 0 auto; margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+  <textarea style="margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
-  <button style="margin: 0 auto; margin-top: 10px; width: 70%; height: 3em; background-color: gray; color: black; font-size: 1em; border-radius: 12px; border: 1px gold solid; margin-bottom: 10px;">
+  <button style="margin-top: 10px; width: 70%; height: 3em; background-color: gray; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;">
   GENERATE CODE  
   </button>
 </div>
