--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -62,7 +62,18 @@
   GENERATE CODE  
   </button>
 </div>
+
+
   
+  <div style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px;">
+    
+  </div>
+
+
+
+
+
+<!--- FAQ --->
 
 <div class="line"></div>
  <span style="text-align: center; font-size: 2em;"> Frequently Asked Question And Answer</span> <br>
