--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -65,7 +65,7 @@
 
 
   
-  <div style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px;">
+  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px;">
     
   </div>
 
