--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -58,7 +58,8 @@
 <span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Your Prompt: </span>
   <textarea id="prmpt" style="margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
-  <button onclick="generate()" style="margin-top: 10px; width: 70%; height: 3em; background-color: gray; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;">
+  <button onclick="generate()" style="margin-top: 10px; width: 70%; height: 3em; background-color: transparent; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;
+    box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset;">
   GENERATE CODE  
   </button>
 </div>
