--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -65,7 +65,7 @@
 </div>
 
 
-  <span style="color: white; margin-left: 10px; margin-top: 20px; margin-bottom: 20px;"> Generated Code: </span>
+  <span style="color: white; margin-left: 10px; margin-top: 40px; margin-bottom: 20px;"> Generated Code: </span>
   <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px;">
     
   </div>
@@ -97,9 +97,7 @@
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely! The generated code is intended for use in your projects. Our system supports seamless integration, allowing you to enhance your code with new features and functionalities.</span><br> 
   <div class="line"></div> <br>
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question:  Is my data secure when using the AI code generator?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: We prioritize the security and privacy of user data. The code generation process is performed locally on our servers, and we do not store any sensitive or personal information.
-
-Feel free to customize these FAQs to better suit the specifics of your AI code generator and the concerns your users might have.</span><br> 
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: We prioritize the security and privacy of user data. The code generation process is performed locally on our servers, and we do not store any sensitive or personal information.</span><br> 
   <div class="line"></div> <br>
  
   <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
@@ -109,7 +107,7 @@ Feel free to customize these FAQs to better suit the specifics of your AI code g
   <script>
     var prompt_ = document.querySelector("#prmpt");
     function generate(){
-      if(!prompt_.valuw || prompt_.value.trim() === ""){
+      if(!prompt_.value || prompt_.value.trim() === ""){
 prompt_.focus();
         return;
       };
