--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -65,7 +65,7 @@
 </div>
 
 
-  <span style="color: white; margin-left: 10px; margin-top: 40px; margin-bottom: 20px;"> Generated Code: </span>
+  <span style="font-size: 1em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 20px;"> Generated Code: </span>
   <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px;">
     
   </div>
