--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -67,12 +67,12 @@
 
   <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 1em;"> Generated Code: </span>
   <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid green; border-radius: 4px;">
-    
+    <span id="bang" style="display: block; font-size: 22px; color: white; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Bang test</span>
   </div>
 
 
 
-
+<h2>Our AI tool Help you to generate code from your prompt Which is also known to Text To Code and our AI can generate Code In Most Languagd You can also debug your code using our AI</h2>
 
 <!--- FAQ --->
 
